MERGE MajorJuneRefactoring branch r1120:1125